Fix white_float overflow

--- a/init/static/base.css
+++ b/init/static/base.css
@@ -953,7 +953,6 @@ div.sym_detail_visible {
     z-index: 499;
     background-color: white;
     max-width: 100%;
-    overflow: auto;
 }
 
 .floatw {
